Added streaming API implementation and a lot of other stuff. (too lazy to list)