@@ -14,6 +14,12 @@ repositories {
 
 dependencies {
     implementation "com.google.code.gson:gson:2.8.6"
+    implementation "com.neovisionaries:nv-websocket-client:2.14"
+    compileOnly "com.neovisionaries:nv-websocket-client:2.14"
+}
+
+compileJava {
+    options.compilerArgs += ['--add-reads', 'nl.elec332.planetside2api=ALL-UNNAMED']
 }
 
 //tasks.jar.enabled = false
